GENERAL CHANGELOG - Early Access 0.9

- Upgraded supported game version to 1.12.10
- Full map rework for: Indonesia, Mozambique, the Philippines, Mongolia, Uruguay, Brazil, Paraguay, Central America, Argentina, Venezuela, Ghana, Mali, Burkina Faso, Eritrea, Namibia
- Full political rework for: Papua New Guinea, Indonesia, Turkey, Mozambique, Madagascar, Argentina, Paraguay, Venezuela, Peru, Colombia, El Salvador, the Dominican Republic, Albania, Cambodia, Burkina Faso, Guinea-Bissau, Mauritania, Eritrea, Belarus, Malta, Ethiopia
- Political tweaks for: South Africa, Laos
- (TfV) New autonomous regions: Gibraltar, Turks & Caicos Islands
- Added the Norwegian Language Conflict
- Fixed Dronning Maud Land (Norwegian Antarctica) and the Greenland Ice Sheet not being impassable
- Snap elections are now instant (previously in 30 days), in order to prevent the game breaking due to something happening to the country during the 30 days
- Parliament has been streamlined, with seat percentages now being rounded into actual seats (100 for every country for now), the Speaker breaks any 50-50 tie
- Electoral Thresholds have been added, and you can set it from a range of 0.5% (natural threshold) to 8%
- Improved election events
- The Vatican City and Mount Athos will no longer try to join the United Nations
- Added the Somali Civil War & Mali War
- Added various events that change party leaders
- Added a decision for Honduras to change their flag shade of blue
- Added a decision for Ethiopia to create the Prosperity Party
- Improved events for Venezuela, Ethiopia and Peru
- Complete rework of the alert icons, topbar icons and toolbar buttons
- Added Al-Qaeda
- Added the Bab-el-Mandeb Strait
- Added a bunch of unique opinion modifiers for flavor purposes
- Non-permanent members of the United Nations Security Council will now be automatically elected
- And more