@@ -24,7 +24,7 @@ bookmarks = {
 			ideology = communist
 			ideas={
 				idea_united_nations_security_council_member
-				shanghai_cooperation_organization_member
+				idea_shanghai_cooperation_organization_member
 				nuclear_weapons_state
 				idea_great_firewall
 			}			
@@ -36,7 +36,7 @@ bookmarks = {
 			ideas = {
 				idea_united_nations_security_council_member
 				idea_commonwealth_of_independent_states_member
-				shanghai_cooperation_organization_member
+				idea_shanghai_cooperation_organization_member
 				nuclear_weapons_state
 			}
 		}
@@ -87,7 +87,7 @@ bookmarks = {
 			ideas = {
 				nuclear_weapons_state
 				idea_commonwealth_of_nations_member
-				shanghai_cooperation_organization_member
+				idea_shanghai_cooperation_organization_member
 			}
 		}
 		
