@@ -338,6 +338,20 @@ on_actions = {
 					}
 				}
 			}
+			every_country = {
+				limit = {
+					has_idea = idea_shanghai_cooperation_organization_member
+				}
+				every_other_country = {
+					limit = {
+						has_idea = idea_shanghai_cooperation_organization_member
+					}
+					add_opinion_modifier = {
+						target = PREV
+						modifier = shanghai_cooperation_organization_member
+					}
+				}
+			}
 			if = {
 				limit = {
 					NOT = {
