@@ -249,6 +249,10 @@ opinion_modifiers = {
 		value = 30
 	}
 
+	shanghai_cooperation_organization_member = {
+		value = 30
+	}
+
 	# ISLAM
 
 	fellow_sunni = {
