@@ -251,6 +251,24 @@ country_event = {
 				}
 			}
 		}
+		if = {
+			limit = {
+				has_global_flag = ongoing_SCO_application # Shanghai Cooperation Organization
+			}
+			add_ideas = idea_shanghai_cooperation_organization_member
+			clr_global_flag = ongoing_SCO_application
+			hidden_effect = {
+				every_country = {
+					limit = {
+						has_idea = idea_shanghai_cooperation_organization_member
+					}
+					add_opinion_modifier = { target = ROOT modifier = shanghai_cooperation_organization_member }
+					ROOT = {
+						add_opinion_modifier = { target = PREV modifier = shanghai_cooperation_organization_member }
+					}
+				}
+			}
+		}
 		clr_global_flag = ongoing_generic_application
 		clear_variable = global.generic_application_vote_count_in_favor
 		clear_variable = global.generic_application_vote_count_against
