@@ -94,7 +94,7 @@ country_event = {
 	trigger = {
 		NOT = { 
 			any_country = {
-				has_idea = shanghai_cooperation_organization_member
+				has_idea = idea_shanghai_cooperation_organization_member
 			}
 		}
 	}
