@@ -80,7 +80,7 @@ give_guarantee = NPL
 add_ideas = {
     nuclear_weapons_state
 	idea_commonwealth_of_nations_member
-	shanghai_cooperation_organization_member
+	idea_shanghai_cooperation_organization_member
 	lgbt_minority_womens_rights_conservative
 	parliamentary_system
 	federal
