@@ -96,7 +96,7 @@ if = {
 add_ideas = {
 	limited_conscription
 	idea_commonwealth_of_independent_states_member
-	shanghai_cooperation_organization_member
+	idea_shanghai_cooperation_organization_member
 	presidential_republic
 	organized_labour_discouraged
 	very_low_taxes
