@@ -94,7 +94,7 @@ if = {
 add_ideas = {
 	active_draft
 	idea_commonwealth_of_independent_states_member
-	shanghai_cooperation_organization_member
+	idea_shanghai_cooperation_organization_member
 	very_low_taxes
 	#moderate_healthcare_spending
 	five_year_term
