@@ -67,7 +67,7 @@ set_technology = {
 add_ideas = {
     nuclear_weapons_state
 	idea_commonwealth_of_nations_member
-	shanghai_cooperation_organization_member
+	idea_shanghai_cooperation_organization_member
 	islamic_sectarian_violence
 	lgbt_minority_womens_rights_conservative
 	islam
