@@ -86,7 +86,7 @@ create_equipment_variant = { name = "H-5" type = strat_bomber_equipment_1  obsol
 
 add_ideas = {
 	idea_united_nations_security_council_member
-	shanghai_cooperation_organization_member
+	idea_shanghai_cooperation_organization_member
     nuclear_weapons_state
 	idea_great_firewall
 	free_trade
