@@ -103,7 +103,7 @@ create_equipment_variant = { name = "Tu-22M3" type = strat_bomber_equipment_1 up
 add_ideas = {
 	idea_united_nations_security_council_member
 	idea_commonwealth_of_independent_states_member
-	shanghai_cooperation_organization_member
+	idea_shanghai_cooperation_organization_member
     nuclear_weapons_state
 	presidential_republic
 	federal
