@@ -90,7 +90,7 @@ if = {
 
 add_ideas = {
 	idea_commonwealth_of_independent_states_member
-	shanghai_cooperation_organization_member
+	idea_shanghai_cooperation_organization_member
 	presidential_republic
 	civil_liberties_authoritarian
 	active_draft
