@@ -519,4 +519,9 @@ spriteTypes = {
 		name = "GFX_decision_prosperity_party"
 		texturefile = "gfx/interface/decisions/prosperity_party.dds"
 	}
+
+	spriteType = {
+		name = "GFX_decision_shanghai_cooperation_organization"
+		texturefile = "gfx/interface/decisions/shanghai_cooperation_organization.dds"
+	}
 }
