@@ -71,7 +71,9 @@
  leave_gulf_cooperation_council: "Leave the §GGulf Cooperation Council§!"
  leave_gulf_cooperation_council_desc: "The Gulf Cooperation Council is a worthless institution that only serves to protect the colonial interests of corrupt leaders. We must withdraw immediately."
  join_shanghai_cooperation_organization: "Apply to join the Shanghai Cooperation Organization"
+ join_shanghai_cooperation_organization_desc: "As a nation wanting to overthrow the Western hegemony and establish a multipolar order, we must join forces with similar nations. Therefore, it's time to join the Shanghai Cooperation Organization."
  leave_shanghai_cooperation_organization: "Leave the Shanghai Cooperation Organization"
+ leave_shanghai_cooperation_organization_desc: "The SCO is an organization full of dictators, corruption and backwards thinking. Why would we want our great nation to be associated with such garbage?"
  join_asean: "Apply to join §OASEAN§!"
  join_asean_desc: "The Association of Southeast Asian Nations (ASEAN) is a cornerstone of democracy and development in the Southeast Asian region. Why wouldn't we want to partake in this project?"
  leave_asean: "Leave §OASEAN§!"
@@ -204,6 +206,8 @@
  claim_greater_croatia_desc: "The idea of a Greater Croatia was created by Dobroslav Paraga, the first leader of the neo-fascist Croatian Party of Rights (HSP). The irredentist concept advocates for the Croatian state to take possession of the territories of Bosnia & Herzegovina, Bačka, Srem, Sandžak and Kotor."
  embrace_pan_mongolism: "Embrace Pan-Mongolism"
  embrace_pan_mongolism_desc: "Despite having achieved independence from the Soviet sphere in 1991, many Mongols remain outside of their homeland, their regions occupied by foreign powers. These regions include Inner Mongolia, Buryatia, Tuva, Altai, Agin and Ust-Orda. In order to achieve true independence, all Mongol territories must return to independent Mongolia."
+ claim_united_macedonia: "Claim United Macedonia"
+ claim_united_macedonia_desc: "An independent Macedonian state, controlling all rightful regions of Macedonia, hasn't existed for centuries. With our independence from Yugoslavia secured, we have a unique opportunity to reclaim the territories unfortunately occupied by Greece and Bulgaria."
  establish_the_kherson_peoples_republic: "Establish the §YKherson People's Republic§!"
  establish_the_kherson_peoples_republic_desc: "In line with the establishment of the DPR and LPR in 2014, we must create a similar authority to govern the region of Kherson. Vladimir Saldo will run the new Kherson People's Republic."
 
