@@ -301,8 +301,8 @@
  idea_commonwealth_of_independent_states_member_desc: "This country is a member of the Commonwealth of Independent States (CIS), a regional organization that promotes intergovernmental cooperation between the post-Soviet states."
  idea_gulf_cooperation_council_member: "Gulf Cooperation Council Member"
  idea_gulf_cooperation_council_member_desc: "This country is a member of the Gulf Cooperation Council (GCC), a regional organisation that promotes intergovernmental cooperation between the Arab states bordering the Persian Gulf."
- shanghai_cooperation_organization_member: "Shanghai Cooperation Organization Member"
- shanghai_cooperation_organization_member_desc: "This country is a member of the Shanghai Cooperation Organization."
+ idea_shanghai_cooperation_organization_member: "Shanghai Cooperation Organization Member"
+ idea_shanghai_cooperation_organization_member_desc: "This country is a member of the Shanghai Cooperation Organization, a global organisation that promotes the establishment of a multipolar world order, and the end of Western dominance."
  idea_benelux_union_member: "Benelux Union Member"
  idea_benelux_union_member_desc: "This country is a member of the Benelux Union, a regional organisation that promotes intergovernmental cooperation between the nation states of the Low Countries."
  idea_treaty_on_the_prohibition_of_nuclear_weapons: "Treaty on the Prohibition of Nuclear Weapons"
