@@ -52,6 +52,7 @@
  gulf_cooperation_council_member: "Gulf Cooperation Council Member"
  commonwealth_of_independent_states_member: "Commonwealth of Independent States Member"
  league_of_arab_states_member: "League of Arab States Member"
+ shanghai_cooperation_organization_member: "Shanghai Cooperation Organization Member"
 
  # ISLAM
  fellow_sunni: "Fellow Sunni State"
