@@ -22,4 +22,6 @@ GENERAL CHANGELOG - Early Access 0.9
 - Added the Bab-el-Mandeb Strait
 - Added a bunch of unique opinion modifiers for flavor purposes
 - Non-permanent members of the United Nations Security Council will now be automatically elected
+- Added irredentist decision for Greater Macedonia
+- Overhauled all remaining international organizations (joining systems, opinion modifiers etc), and planned more
 - And more
